Bug 101132 - Crash when trying to add link (a11y)
Summary: Crash when trying to add link (a11y)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.3 rc
Hardware: All Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0
Keywords: accessibility, bibisectRequest, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-07-26 13:12 UTC by Alex ARNAUD
Modified: 2016-08-01 16:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace of the crash (12.27 KB, text/plain)
2016-07-26 13:12 UTC, Alex ARNAUD
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex ARNAUD 2016-07-26 13:12:13 UTC
Created attachment 126415 [details]
Backtrace of the crash

Dear LibreOffice community,

Version: 5.2.0.3
Build ID: 7dbd85f5a18cfeaf6801c594fc43a5edadc2df0c
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; 
Locale: fr-FR (fr_FR.UTF-8)

I use Debian 8.5 and LibreOffice GTK2. I've also reproduce the bug in Ubuntu Mate 16.04.1.

Steps to reproduce :
1) Open Libreoffice Writer (or Impress)
2) Write text
3) Select it to add a link
4) Type or copy your link target
5) Press enter
Result : LibreOffice crash

FYI, the problem doesn't appear in version 5.1.4.

Best regards,
Alex.
Comment 1 Julien Nabet 2016-07-26 15:40:56 UTC
On pc Debian x86-64 with master sources updated today or with LO Debian package 5.1.5.1 + SAL_USE_VCLPLUGIN=gtk in both cases, I don't reproduce this.

What link do you type or paste? (I tried with http://www.google.com)
Do you reproduce this after having renamed your LO directory profile? (see https://wiki.documentfoundation.org/UserProfile#GNU.2FLinux)
Comment 2 Julien Nabet 2016-07-26 15:41:49 UTC
Argh, considering your bt, I must test with accessibility enabled.
Comment 3 Alex ARNAUD 2016-07-26 16:03:03 UTC
(In reply to Julien Nabet from comment #2)
> Argh, considering your bt, I must test with accessibility enabled.

The bug appears only if Orca is enabled.
Comment 4 Julien Nabet 2016-07-26 16:37:09 UTC
I tried Orca and LO Debian package 5.1.5, I just noticed this:
/usr/lib/python3/dist-packages/pyatspi/Accessibility.py:56: Warning: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
  return '[%s | %s]' % (self.getRoleName(), self.name)

Which kind of link did you use and what did you type?
Comment 5 Julien Nabet 2016-07-26 16:39:25 UTC
Also, what accessibility options did you enable? (I just enabled high-contrast)
Comment 6 Alex ARNAUD 2016-07-27 18:17:29 UTC
(In reply to Julien Nabet from comment #5)
> Also, what accessibility options did you enable? (I just enabled
> high-contrast)

Dear Julien,

I've just tested in fresh installed computer and the problem also appears.
On Gnome, you need to activate Orca (alt+super+s).
On mate you need to :
1) Go to Preferences, system, assistive technologies
2) Check the box "enabled assistive technology"
3) Restart your session
4) Start Orca

After that, you can do the steps I've described. The problem seems to appear only on Debian Jessie.

Best regards,
Alex.
Comment 7 Julien Nabet 2016-07-27 20:13:42 UTC
(In reply to Alex ARNAUD from comment #6)
> (In reply to Julien Nabet from comment #5)
> > Also, what accessibility options did you enable? (I just enabled
> > high-contrast)
> 
> Dear Julien,
> 
> I've just tested in fresh installed computer and the problem also appears.
> On Gnome, you need to activate Orca (alt+super+s).
> On mate you need to :
> 1) Go to Preferences, system, assistive technologies
> 2) Check the box "enabled assistive technology"
> 3) Restart your session
> 4) Start Orca
> 
> After that, you can do the steps I've described. The problem seems to appear
> only on Debian Jessie.
> 
> Best regards,
> Alex.

Since I use Debian testing, I suppose I can't help here.
So let's put this back to unconfirmed and uncc myself.

Certainly someone may help here.
Comment 8 Raphaël POITEVIN 2016-07-27 20:33:06 UTC
Hello,

I'm Alex's collegue. I do reproduce that bug in the same conditions. I also use Orca 3.16 in Debian 8, Mate desktop environment.
URL test:
http://hypra.fr/?-Accueil-1-

Regards,

raphaël
Comment 9 Aron Budea 2016-07-27 23:01:28 UTC
Alex, Raphaël, thanks for the analysis and confirmation.
I could also reproduce the crash with 5.2.0.3 / Ubuntu 15.10 with Orca enabled. Not reproduced with 5.1.4.2.

A tad simpler reproduction, it's not necessary to have text in the document, can start with Instert -> Hyperlink... from an empty document.

Julien, thanks for taking a look at this, would you mind trying to reproduce the crash in bug 101113? That crash is supposed to be triggered in 5.1.4, and I had no luck with Ubuntu.

Upping severity to critical, adding bibisectRequest.
Comment 10 Commit Notification 2016-07-28 07:53:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4fc3c8a3df485f6dccdcb2c51c6266fbd0dace3e

Resolves: tdf#101132 a11y crash in hyperlink

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2016-07-28 07:55:40 UTC
5-2 and 5-2-0 reviews in gerrit
Comment 12 Commit Notification 2016-07-28 14:32:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ae464270146e003532653db80687f272de1c616a&h=libreoffice-5-2

Resolves: tdf#101132 a11y crash in hyperlink

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2016-07-28 21:56:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f16f5096652ab7d081b06114af4d8d112053784&h=libreoffice-5-2-0

Resolves: tdf#101132 a11y crash in hyperlink

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Alex ARNAUD 2016-08-01 15:52:49 UTC
Dear all,

I can confirm that the fix resolves the issue. I've tested with version 5.2 RC4.
Thank you very much for the fix :) !

Best regards,
Alex.
Comment 15 Julien Nabet 2016-08-01 16:04:38 UTC
Thank you Alex for your feedback, let's put this one to VERIFIED then.