Resolves: tdf#101132 a11y crash in hyperlink

regression from...

commit aa6c54f337a616c9ca6a39cfc8708657018d8613
Date:   Mon Jan 18 09:01:15 2016 +0200

    loplugin:unusedfields

Change-Id: Ic2b7fe5f2d49a447a9936c4fb04bafcc7349ecf9